--- a/thesis_evaluation_results/thesis_evaluation.ipynb
+++ b/thesis_evaluation_results/thesis_evaluation.ipynb
@@ -1,26 +1,151 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5f5dbaa8-5b60-41f7-afc7-2f6f75988d31",
+   "metadata": {},
+   "source": [
+    "<h1>Thesis System Evaluation Results Calculation Using DataFrame</h1>\n",
+    "<br/>\n",
+    "<p>This notebook/project focused on getting the results of system evaluation for my undergraguate thesis using DataFrame.</p>\n",
+    "<p>Specifically, it aimed to:</p>\n",
+    "<ul>\n",
+    "    <li>Use NumPy and pandas' DataFrame for data manipulation;</li>\n",
+    "    <li>Use Matplotlib for data visualization;</li>\n",
+    "    <li>Calculate the weighted average and standard deviation of each criterion; and</li>\n",
+    "    <li>Idenitify the overall average and standard deviation of the system evaluation. </li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f471d39a-a7e4-4e40-be23-2dad26dddc6c",
+   "metadata": {},
+   "source": [
+    "<h2>Import the thesis evaluation tally dataset:</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7a3a23b4-e7bb-4189-88fc-6232fa4fac95",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'numpy'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Poor</th>\n",
+       "      <th>Fair</th>\n",
+       "      <th>Satisfactory</th>\n",
+       "      <th>Very Satisfactory</th>\n",
+       "      <th>Outstanding</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Indicator</th>\n",
+       "      <th>Criteria</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>01.a</th>\n",
+       "      <th>Functional Suitability</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01.b</th>\n",
+       "      <th>Functional Suitability</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>23</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01.c</th>\n",
+       "      <th>Functional Suitability</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01.d</th>\n",
+       "      <th>Functional Suitability</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>29</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>02.a</th>\n",
+       "      <th>Functional Suitability</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>25</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Poor  Fair  Satisfactory  Very Satisfactory  \\\n",
+       "Indicator Criteria                                                              \n",
+       "01.a      Functional Suitability     0     0             1                 22   \n",
+       "01.b      Functional Suitability     0     0             4                 23   \n",
+       "01.c      Functional Suitability     0     0             2                 24   \n",
+       "01.d      Functional Suitability     0     0             3                 29   \n",
+       "02.a      Functional Suitability     0     0             2                 25   \n",
+       "\n",
+       "                                  Outstanding  \n",
+       "Indicator Criteria                             \n",
+       "01.a      Functional Suitability           57  \n",
+       "01.b      Functional Suitability           53  \n",
+       "01.c      Functional Suitability           54  \n",
+       "01.d      Functional Suitability           48  \n",
+       "02.a      Functional Suitability           53  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "# Import the libraries needed\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "#import matplotlib.pyplot as plt\n",
     "\n",
     "# Import the CSV file and save as DataFrame\n",
@@ -38,8 +163,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7caf5d0-8783-4817-92f6-eb92e91ebe55",
+   "metadata": {},
+   "source": [
+    "<h2>Prepare the given (constant) values:</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "8a04c79d-8447-4b0c-9dee-25f0b2d7297b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total respondents (constant)\n",
+    "num_of_respondents = 80\n",
+    "\n",
+    "# Weights/Ratings (w)\n",
+    "w = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "22e326a3-31ac-4104-b514-fe7f5aa9585a",
    "metadata": {},
    "outputs": [],
@@ -59,20 +206,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a04c79d-8447-4b0c-9dee-25f0b2d7297b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Total respondents (constant)\n",
-    "num_of_respondents = 80\n",
-    "\n",
-    "# Weights/Ratings (w)\n",
-    "w = [1,2,3,4,5]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "17249b5e-631c-4f36-9986-6bb1db842eba",
    "metadata": {},
@@ -82,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dfa33def-e6fc-4597-9e0c-c511dd990113",
    "metadata": {},
    "outputs": [
@@ -192,7 +325,7 @@
        "02.a      Functional Suitability          265  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e997da14-46ec-43bc-bc47-2c87e225d7af",
    "metadata": {},
    "outputs": [],
@@ -218,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "eb761ab1-891b-4aa7-b412-d7f6f971d83f",
    "metadata": {},
    "outputs": [
@@ -292,7 +425,7 @@
        "4      02.a  Functional Suitability   4.6375"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,19 +441,14 @@
    "id": "359a58c0-207b-47c6-9065-1debd7928487",
    "metadata": {},
    "source": [
-    "<h2>Computation of Standard Deviation</h2>"
+    "<h2>Computation of Standard Deviation:</h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "848e42bd-cac9-406d-a58d-22344b8bf0f8",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -398,7 +526,7 @@
        "4      02.a  Functional Suitability   4.6375            0.533528"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +553,7 @@
     "# Get the 'Summation of (Number of Votes [X] (Rating- Mean)^2)''\n",
     "df_summation = df_X_r_m_pow.agg(['sum'], axis=1)\n",
     "\n",
-    "# Instantiate numerator and denominator for STDDEV formula\n",
+    "# Create new variable for numerator and denominator values of STDDEV formula\n",
     "df_std_numerator = df_summation\n",
     "df_std_denominator = num_of_respondents-1\n",
     "\n",
@@ -435,13 +563,12 @@
     "df_calc_per_indicator = df_rate_mean_pow.drop(temp_columns, axis=1)\n",
     "\n",
     "df_calc_per_indicator['Standard Deviation'] = df_std_per_indicator\n",
-    "df_calc_per_indicator.head()\n",
-    "#df_std_per_indicator"
+    "df_calc_per_indicator.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "58b34cad-ab1b-45a3-b858-412363b47dca",
    "metadata": {},
    "outputs": [],
@@ -452,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5bddc543-6821-40d3-8bcc-07f7215ffcbc",
    "metadata": {},
    "outputs": [],
@@ -469,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5652d758-6720-478e-9f08-a42892b7b207",
    "metadata": {},
    "outputs": [
@@ -578,7 +705,7 @@
        "Overall                    4.53                0.58       Outstanding"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,9 +720,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -607,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
