--- a/thesis_evaluation_results/thesis_evaluation.ipynb
+++ b/thesis_evaluation_results/thesis_evaluation.ipynb
@@ -5,14 +5,13 @@
    "id": "5f5dbaa8-5b60-41f7-afc7-2f6f75988d31",
    "metadata": {},
    "source": [
-    "<h1>Thesis System Evaluation Results Calculation Using DataFrame</h1>\n",
+    "<h1>System Evaluation Results Calculation Using DataFrame</h1>\n",
     "<br/>\n",
-    "<p>This notebook/project focused on getting the results of system evaluation for my undergraguate thesis using DataFrame.</p>\n",
-    "<p>Specifically, it aimed to:</p>\n",
+    "<p>This notebook/project focuses on computing the system evaluation results for my undergraguate thesis using my skills in Python's DataFrame.</p>\n",
+    "<p>Specifically, it aims to:</p>\n",
     "<ul>\n",
-    "    <li>Use NumPy and pandas' DataFrame for data manipulation;</li>\n",
-    "    <li>Use Matplotlib for data visualization;</li>\n",
-    "    <li>Calculate the weighted average and standard deviation of each criterion; and</li>\n",
+    "    <li>Utilize NumPy and pandas' DataFrame for efficient data manipulation;</li>\n",
+    "    <li>Calculate the weighted average and standard deviation for each criterion; and</li>\n",
     "    <li>Idenitify the overall average and standard deviation of the system evaluation. </li>\n",
     "</ul>"
    ]
