--- a/thesis_evaluation_results/thesis_evaluation.ipynb
+++ b/thesis_evaluation_results/thesis_evaluation.ipynb
@@ -12,7 +12,7 @@
     "<ul>\n",
     "    <li>Utilize NumPy and pandas' DataFrame for efficient data manipulation;</li>\n",
     "    <li>Calculate the weighted average and standard deviation for each criterion; and</li>\n",
-    "    <li>Idenitify the overall average and standard deviation of the system evaluation. </li>\n",
+    "    <li>Determine the overall average and standard deviation of the system evaluation. </li>\n",
     "</ul>"
    ]
   },
@@ -21,7 +21,8 @@
    "id": "f471d39a-a7e4-4e40-be23-2dad26dddc6c",
    "metadata": {},
    "source": [
-    "<h2>Import the thesis evaluation tally dataset:</h2>"
+    "<h2>Data Preparation</h2>\n",
+    "<h3>Import the thesis evaluation tally dataset.</h3>"
    ]
   },
   {
@@ -166,7 +167,7 @@
    "id": "f7caf5d0-8783-4817-92f6-eb92e91ebe55",
    "metadata": {},
    "source": [
-    "<h2>Prepare the given (constant) values:</h2>"
+    "<h3>Prepare the given (constant) values.</h3>"
    ]
   },
   {
@@ -180,7 +181,8 @@
     "num_of_respondents = 80\n",
     "\n",
     "# Weights/Ratings (w)\n",
-    "w = [1,2,3,4,5]"
+    "w = [1,2,3,4,5]\n",
+    "# 1-Poor, 2-Fair, 3-Satisfactory, 4-Very Satisfactory, 5-Outstanding"
    ]
   },
   {
@@ -213,8 +215,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a8da615-7b6e-4ac6-a5b6-5aca5b4ea4c9",
+   "metadata": {},
+   "source": [
+    "<h3>Compute the weighted scores for each response scale.</h3>\n",
+    "\n",
+    "Calculate the individual scores by multiplying the numerical values assigned to each response scale (e.g., 1-Poor, 2-Fair, ..., 5-Outstanding) by the corresponding number of responses."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "dfa33def-e6fc-4597-9e0c-c511dd990113",
    "metadata": {},
    "outputs": [
@@ -324,7 +336,7 @@
        "02.a      Functional Suitability          265  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,8 +350,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e67245e-3caf-44f5-8296-91cf4df4ddbb",
+   "metadata": {},
+   "source": [
+    "<h3>Solve for the average scores of each indicator.</h3>\n",
+    "\n",
+    "Calculate it by getting the sum of individual scores for each indicator, then divide it by the number of respondents/sample."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e997da14-46ec-43bc-bc47-2c87e225d7af",
    "metadata": {},
    "outputs": [],
@@ -350,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "eb761ab1-891b-4aa7-b412-d7f6f971d83f",
    "metadata": {},
    "outputs": [
@@ -424,7 +446,7 @@
        "4      02.a  Functional Suitability   4.6375"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,12 +462,50 @@
    "id": "359a58c0-207b-47c6-9065-1debd7928487",
    "metadata": {},
    "source": [
-    "<h2>Computation of Standard Deviation:</h2>"
+    "<h2>Computation of Standard Deviation (STDDEV)</h2>\n",
+    "<h3>Prepare the DataFrame for calculation of STDDEV.</h3>\n",
+    "\n",
+    "Create a copy of \"df_mean_per_indicator\", then insert five (5) temporary columns for easier aggregation of values needed in the formula."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "id": "32622254-4541-462a-bd5c-637559d7f7bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an independent copy of DataFrame\n",
+    "df_rate_mean_pow = df_mean_per_indicator.copy(deep=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0295e60f-502c-473f-9e85-3e30b3f0bb75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Name of temporary columns that will be used for coputing STDDEV\n",
+    "temp_columns = ['X(1-M)^2','X(2-M)^2','X(3-M)^2','X(4-M)^2','X(5-M)^2']\n",
+    "\n",
+    "df_rate_mean_pow[temp_columns] = 0 # Create new  columns with value 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83b90f60-5f5f-432c-af9c-cb5488f78aef",
+   "metadata": {},
+   "source": [
+    "<h3>Solve for the standard deviation of each indicator.</h3>\n",
+    "\n",
+    "Formula: \n",
+    "STDDEV = sqrt( ∑ (Number of Votes X (Rating- Mean)^2) / N-1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "848e42bd-cac9-406d-a58d-22344b8bf0f8",
    "metadata": {},
    "outputs": [
@@ -525,7 +585,7 @@
        "4      02.a  Functional Suitability   4.6375            0.533528"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,15 +593,10 @@
    "source": [
     "'''\n",
     "Formula:\n",
-    "STDDEV = sqrt(Summation of (Number of Votes X (Rating- Mean)^2)/N-1)\n",
+    "\n",
     "'''\n",
-    "df_rate_mean_pow = df_mean_per_indicator.copy(deep=True) # Created an independent copy of DataFrame\n",
     "\n",
-    "# Name of temporary columns that will be used for coputing STDDEV\n",
-    "temp_columns = ['X(1-M)^2','X(2-M)^2','X(3-M)^2','X(4-M)^2','X(5-M)^2']\n",
-    "\n",
-    "df_rate_mean_pow[temp_columns] = 0 # Created columns\n",
-    "\n",
+    "# Compute (Rating - Mean)^2 \n",
     "for i, col in enumerate(temp_columns):\n",
     "    df_rate_mean_pow[col] = df_rate_mean_pow[['Average']].sub(w[i]).pow(2)\n",
     "\n",
@@ -567,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "58b34cad-ab1b-45a3-b858-412363b47dca",
    "metadata": {},
    "outputs": [],
@@ -578,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "5bddc543-6821-40d3-8bcc-07f7215ffcbc",
    "metadata": {},
    "outputs": [],
@@ -595,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "5652d758-6720-478e-9f08-a42892b7b207",
    "metadata": {},
    "outputs": [
@@ -704,7 +759,7 @@
        "Overall                    4.53                0.58       Outstanding"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
