--- a/thesis_evaluation_results/thesis_evaluation.ipynb
+++ b/thesis_evaluation_results/thesis_evaluation.ipynb
@@ -21,6 +21,7 @@
    "id": "f471d39a-a7e4-4e40-be23-2dad26dddc6c",
    "metadata": {},
    "source": [
+    "<hr/>\n",
     "<h2>Data Preparation</h2>\n",
     "<h3>Import the thesis evaluation tally dataset.</h3>"
    ]
@@ -211,6 +212,7 @@
    "id": "17249b5e-631c-4f36-9986-6bb1db842eba",
    "metadata": {},
    "source": [
+    "<hr/>\n",
     "<h2>Computation of Weighted Mean</h2>"
    ]
   },
@@ -462,6 +464,7 @@
    "id": "359a58c0-207b-47c6-9065-1debd7928487",
    "metadata": {},
    "source": [
+    "<hr/>\n",
     "<h2>Computation of Standard Deviation (STDDEV)</h2>\n",
     "<h3>Prepare the DataFrame for calculation of STDDEV.</h3>\n",
     "\n",
@@ -505,8 +508,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "848e42bd-cac9-406d-a58d-22344b8bf0f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.487826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.584477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.530106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.570226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.533528</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sum\n",
+       "0  0.487826\n",
+       "1  0.584477\n",
+       "2  0.530106\n",
+       "3  0.570226\n",
+       "4  0.533528"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Formula:\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "# Compute (Rating - Mean)^2 \n",
+    "for i, col in enumerate(temp_columns):\n",
+    "    df_rate_mean_pow[col] = df_rate_mean_pow[['Average']].sub(w[i]).pow(2)\n",
+    "\n",
+    "tbl_X = df_sys_eval.copy(deep=True).reset_index(drop=True)\n",
+    "tbl_r_m_pow = df_rate_mean_pow[temp_columns]\n",
+    "df_X_r_m_pow = pd.DataFrame(tbl_X.values*tbl_r_m_pow.values)\n",
+    "\n",
+    "# Get the 'Summation of (Number of Votes [X] (Rating- Mean)^2)''\n",
+    "df_summation = df_X_r_m_pow.agg(['sum'], axis=1)\n",
+    "\n",
+    "# Create new variable for numerator and denominator values of STDDEV formula\n",
+    "df_std_numerator = df_summation\n",
+    "df_std_denominator = num_of_respondents-1\n",
+    "\n",
+    "df_std_per_indicator = np.sqrt(df_std_numerator.div(df_std_denominator, axis=1))\n",
+    "df_std_per_indicator.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a110d0ad-f975-40c7-b0ca-9c56400925e0",
+   "metadata": {},
+   "source": [
+    "<hr/>\n",
+    "<h2>Weighted Average and STDDEV Per Indicator</h2>\n",
+    "<h3>Join those two columns of aggregate values in one DataFrame.</h3>\n",
+    "\n",
+    "Firstly, remove the temporary columns we added earlier in \"df_rate_mean_pow\" DataFrame as it is no longer needed. Then, create a new column named 'Standard Deviation' with values of STDDEV per indicator (df_std_per_indicator)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "df1afd78-38bd-4caa-a13b-fb8a035eec39",
    "metadata": {},
    "outputs": [
     {
@@ -585,44 +694,33 @@
        "4      02.a  Functional Suitability   4.6375            0.533528"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
-    "Formula:\n",
-    "\n",
-    "'''\n",
-    "\n",
-    "# Compute (Rating - Mean)^2 \n",
-    "for i, col in enumerate(temp_columns):\n",
-    "    df_rate_mean_pow[col] = df_rate_mean_pow[['Average']].sub(w[i]).pow(2)\n",
-    "\n",
-    "tbl_X = df_sys_eval.copy(deep=True).reset_index(drop=True)\n",
-    "tbl_r_m_pow = df_rate_mean_pow[temp_columns]\n",
-    "df_X_r_m_pow = pd.DataFrame(tbl_X.values*tbl_r_m_pow.values)\n",
-    "\n",
-    "# Get the 'Summation of (Number of Votes [X] (Rating- Mean)^2)''\n",
-    "df_summation = df_X_r_m_pow.agg(['sum'], axis=1)\n",
-    "\n",
-    "# Create new variable for numerator and denominator values of STDDEV formula\n",
-    "df_std_numerator = df_summation\n",
-    "df_std_denominator = num_of_respondents-1\n",
-    "\n",
-    "df_std_per_indicator = np.sqrt(df_std_numerator.div(df_std_denominator, axis=1))\n",
-    "\n",
     "# Drop columns for cleaner dataframe, then create new variable for easier identification\n",
     "df_calc_per_indicator = df_rate_mean_pow.drop(temp_columns, axis=1)\n",
     "\n",
+    "# Put the 'Standard Deviation' column\n",
     "df_calc_per_indicator['Standard Deviation'] = df_std_per_indicator\n",
     "df_calc_per_indicator.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61593d5d-d8f7-4597-ad73-b2dd2c37191a",
+   "metadata": {},
+   "source": [
+    "<hr/>\n",
+    "<h2>Weighted Average and STDDEV Per Criteria</h2>\n",
+    "<h3>Aggregate the mean of values by criteria.</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "58b34cad-ab1b-45a3-b858-412363b47dca",
    "metadata": {},
    "outputs": [],
@@ -632,8 +730,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "308ebd9e-51ac-4cc3-8104-0b79add4aa29",
+   "metadata": {},
+   "source": [
+    "<hr/>\n",
+    "<h2>Overall Average and STDDEV with Adjectival Rating</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "5bddc543-6821-40d3-8bcc-07f7215ffcbc",
    "metadata": {},
    "outputs": [],
@@ -650,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "5652d758-6720-478e-9f08-a42892b7b207",
    "metadata": {},
    "outputs": [
@@ -759,7 +866,7 @@
        "Overall                    4.53                0.58       Outstanding"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,6 +876,15 @@
     "df_calc_per_criteria['Adjectival Rating'] = df_calc_per_criteria['Average'].apply(adj_rating)\n",
     "\n",
     "df_calc_per_criteria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "221ef8c2-20c9-4a9b-8222-218c187e2d67",
+   "metadata": {},
+   "source": [
+    "<hr/>\n",
+    "<footer>Copyright © 2025 Annie Trisha Zamora. All rights reserved.</footer>"
    ]
   }
  ],
