--- a/thesis_evaluation_results/thesis_evaluation.ipynb
+++ b/thesis_evaluation_results/thesis_evaluation.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "5f5dbaa8-5b60-41f7-afc7-2f6f75988d31",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 211.40625,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<h1>System Evaluation Results Calculation Using DataFrame</h1>\n",
     "<br/>\n",
@@ -19,7 +25,13 @@
   {
    "cell_type": "markdown",
    "id": "f471d39a-a7e4-4e40-be23-2dad26dddc6c",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 85.20833587646484,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<hr/>\n",
     "<h2>Data Preparation</h2>\n",
@@ -30,7 +42,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "7a3a23b4-e7bb-4189-88fc-6232fa4fac95",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 197.33334350585938,
+     "visible": true,
+     "width": 100
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -166,7 +184,13 @@
   {
    "cell_type": "markdown",
    "id": "f7caf5d0-8783-4817-92f6-eb92e91ebe55",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 44.07291793823242,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<h3>Prepare the given (constant) values.</h3>"
    ]
@@ -210,7 +234,13 @@
   {
    "cell_type": "markdown",
    "id": "17249b5e-631c-4f36-9986-6bb1db842eba",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 58.145835876464844,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<hr/>\n",
     "<h2>Computation of Weighted Mean</h2>"
@@ -219,7 +249,13 @@
   {
    "cell_type": "markdown",
    "id": "3a8da615-7b6e-4ac6-a5b6-5aca5b4ea4c9",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 78.19792175292969,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<h3>Compute the weighted scores for each response scale.</h3>\n",
     "\n",
@@ -230,7 +266,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "dfa33def-e6fc-4597-9e0c-c511dd990113",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 197.33334350585938,
+     "visible": true,
+     "width": 100
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -354,7 +396,13 @@
   {
    "cell_type": "markdown",
    "id": "3e67245e-3caf-44f5-8296-91cf4df4ddbb",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 78.19792175292969,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<h3>Solve for the average scores of each indicator.</h3>\n",
     "\n",
@@ -376,7 +424,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "eb761ab1-891b-4aa7-b412-d7f6f971d83f",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 170.6666717529297,
+     "visible": true,
+     "width": 100
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -462,7 +516,13 @@
   {
    "cell_type": "markdown",
    "id": "359a58c0-207b-47c6-9065-1debd7928487",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 119.33334350585938,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<hr/>\n",
     "<h2>Computation of Standard Deviation (STDDEV)</h2>\n",
@@ -498,7 +558,13 @@
   {
    "cell_type": "markdown",
    "id": "83b90f60-5f5f-432c-af9c-cb5488f78aef",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 95.33333587646484,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<h3>Solve for the standard deviation of each indicator.</h3>\n",
     "\n",
@@ -510,7 +576,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "848e42bd-cac9-406d-a58d-22344b8bf0f8",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 170.6666717529297,
+     "visible": true,
+     "width": 100
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -603,7 +675,13 @@
   {
    "cell_type": "markdown",
    "id": "a110d0ad-f975-40c7-b0ca-9c56400925e0",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 136.46875,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<hr/>\n",
     "<h2>Weighted Average and STDDEV Per Indicator</h2>\n",
@@ -616,7 +694,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "df1afd78-38bd-4caa-a13b-fb8a035eec39",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 170.6666717529297,
+     "visible": true,
+     "width": 100
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -711,7 +795,13 @@
   {
    "cell_type": "markdown",
    "id": "61593d5d-d8f7-4597-ad73-b2dd2c37191a",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 85.20833587646484,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<hr/>\n",
     "<h2>Weighted Average and STDDEV Per Criteria</h2>\n",
@@ -732,7 +822,13 @@
   {
    "cell_type": "markdown",
    "id": "308ebd9e-51ac-4cc3-8104-0b79add4aa29",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 58.145835876464844,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<hr/>\n",
     "<h2>Overall Average and STDDEV with Adjectival Rating</h2>"
@@ -759,7 +855,13 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "5652d758-6720-478e-9f08-a42892b7b207",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 304,
+     "visible": true,
+     "width": 100
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -881,7 +983,13 @@
   {
    "cell_type": "markdown",
    "id": "221ef8c2-20c9-4a9b-8222-218c187e2d67",
-   "metadata": {},
+   "metadata": {
+    "panel-layout": {
+     "height": 40.46875,
+     "visible": true,
+     "width": 100
+    }
+   },
    "source": [
     "<hr/>\n",
     "<footer>Copyright © 2025 Annie Trisha Zamora. All rights reserved.</footer>"
@@ -905,7 +1013,27 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.7"
-  }
+  },
+  "panel-cell-order": [
+   "5f5dbaa8-5b60-41f7-afc7-2f6f75988d31",
+   "f471d39a-a7e4-4e40-be23-2dad26dddc6c",
+   "7a3a23b4-e7bb-4189-88fc-6232fa4fac95",
+   "f7caf5d0-8783-4817-92f6-eb92e91ebe55",
+   "17249b5e-631c-4f36-9986-6bb1db842eba",
+   "3a8da615-7b6e-4ac6-a5b6-5aca5b4ea4c9",
+   "dfa33def-e6fc-4597-9e0c-c511dd990113",
+   "3e67245e-3caf-44f5-8296-91cf4df4ddbb",
+   "eb761ab1-891b-4aa7-b412-d7f6f971d83f",
+   "359a58c0-207b-47c6-9065-1debd7928487",
+   "83b90f60-5f5f-432c-af9c-cb5488f78aef",
+   "848e42bd-cac9-406d-a58d-22344b8bf0f8",
+   "a110d0ad-f975-40c7-b0ca-9c56400925e0",
+   "df1afd78-38bd-4caa-a13b-fb8a035eec39",
+   "61593d5d-d8f7-4597-ad73-b2dd2c37191a",
+   "308ebd9e-51ac-4cc3-8104-0b79add4aa29",
+   "5652d758-6720-478e-9f08-a42892b7b207",
+   "221ef8c2-20c9-4a9b-8222-218c187e2d67"
+  ]
  },
  "nbformat": 4,
  "nbformat_minor": 5
