--- a/thesis_evaluation_results/thesis_evaluation.ipynb
+++ b/thesis_evaluation_results/thesis_evaluation.ipynb
@@ -860,7 +860,8 @@
      "height": 304,
      "visible": true,
      "width": 100
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
